<resources>
    <string name="app_name">TankClient</string>
    <string name="action_settings">Settings</string>

    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="right">RIGHT</string>
    <string name="left">LEFT</string>
    <string name="fire">FIRE</string>
    <string name="join">JOIN</string>
    <string name="leave">LEAVE</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_start_up">StartUp</string>
    <string name="title_activity_replay">Replay</string>

</resources>
