<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/LinearLayout1"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".ClientActivity"
              android:orientation="vertical">


    <android.support.design.widget.AppBarLayout android:layout_width="match_parent"
                                                android:layout_height="wrap_content">

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:numColumns="16"
        android:columnWidth="20dp"
        android:layout_weight="1"
        tools:listitem="@layout/field_item"/>

    <RelativeLayout
        android:id="@+id/LinearLayoutControl"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="bottom"
        >

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/down" />

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonDown"
            android:layout_alignLeft="@+id/buttonDown"
            android:layout_alignRight="@+id/buttonDown"
            android:text="@string/up" />

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/buttonDown"
            android:text="@string/left" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/buttonDown"
            android:text="@string/right" />

        <Button
            android:id="@+id/buttonFire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fire"
            android:layout_above="@+id/buttonUp"
            android:layout_alignLeft="@+id/buttonUp"
            android:layout_alignStart="@+id/buttonUp"/>

    </RelativeLayout>

</LinearLayout>